--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleuser
 GOOGLE_REDIRECT_URI = http://localhost:3000/google-auth
 
 REACT_APP_URL = http://localhost:3000
-APP_SERVER_URL = https://vast-lime-brown-bear-robe.cyclic.app
+APP_SERVER_URL = http://localhost:4200
