--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
-    "string-strip-html": "^13.4.3"
+    "string-strip-html": "^13.4.3",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
