--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_ENV = development
 
 GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleusercontent.com 
-GOOGLE_REDIRECT_URI = http://localhost:3000/google-auth
+GOOGLE_REDIRECT_URI = https://prizma-next.vercel.app/google-auth
 
-REACT_APP_URL = http://localhost:3000
-APP_SERVER_URL = http://localhost:4200
+REACT_APP_URL = https://prizma-next.vercel.app
+APP_SERVER_URL = https://vast-lime-brown-bear-robe.cyclic.app
