--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_ENV = development
 
 GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleusercontent.com 
-GOOGLE_REDIRECT_URI = https://prizma-next.vercel.app/google-auth
+GOOGLE_REDIRECT_URI = https://amber-viper-tie.cyclic.app/google-auth
 
 REACT_APP_URL = https://prizma-next.vercel.app
-APP_SERVER_URL = https://orange-red-hatchling-hose.cyclic.app
+APP_SERVER_URL = https://amber-viper-tie.cyclic.app
