--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_ENV = development
 
 GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleusercontent.com 
-GOOGLE_REDIRECT_URI = https://sore-lime-codfish-belt.cyclic.app/google-auth
+GOOGLE_REDIRECT_URI = https://cinema-finall-next.vercel.app/google-auth
 
-REACT_APP_URL = https://prizma-next.vercel.app
+REACT_APP_URL = https://cinema-finall-next.vercel.app
 APP_SERVER_URL = https://sore-lime-codfish-belt.cyclic.app
