--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleuser
 GOOGLE_REDIRECT_URI = https://cinema-finall-next.vercel.app/google-auth
 
 REACT_APP_URL = https://cinema-finall-next.vercel.app
-APP_SERVER_URL = https://sore-lime-codfish-belt.cyclic.app
+APP_SERVER_URL = https://kind-tuna-sunglasses.cyclic.app
