--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ REACT_APP_ENV = development
 GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleusercontent.com 
 GOOGLE_REDIRECT_URI = https://cinema-front.vercel.app/google-auth
 
-REACT_APP_URL = https://cinema-front.vercel.app
+REACT_APP_URL = https://cinema-front-next.vercel.app
 APP_SERVER_URL = https://fine-red-viper-tutu.cyclic.app
