--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_ENV = development
 
 GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleusercontent.com 
-GOOGLE_REDIRECT_URI = https://cinema-front.vercel.app/google-auth
+GOOGLE_REDIRECT_URI = https://cinema-front-next-finall-gurgen-erik-hayko.vercel.app/google-auth
 
 REACT_APP_URL = https://cinema-front-next-finall-gurgen-erik-hayko.vercel.app
-APP_SERVER_URL = https://fine-red-viper-tutu.cyclic.app
+APP_SERVER_URL = https://rose-uninterested-llama.cyclic.app
