--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_ID = 623188365811-e9mlssmcs3daf1dvde5qc5it7i0lncdp.apps.googleuser
 GOOGLE_REDIRECT_URI = https://cinema-front-next-finall-gurgen-erik-hayko.vercel.app/google-auth
 
 REACT_APP_URL = https://cinema-front-next-finall-gurgen-erik-hayko.vercel.app
-APP_SERVER_URL = https://rose-uninterested-llama.cyclic.app
+APP_SERVER_URL = http://5.35.82.26:5000
